--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <title>document</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-  <link rel="stylesheet" href="/css/global.min.css">
-  <link rel="stylesheet" href="/css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="css/global.min.css">
+  <link rel="stylesheet" href="css/swiper-bundle.min.css">
 
   <style>
      html,
@@ -108,9 +108,9 @@
     <footer></footer>
 
   </div>
-  <script src="/js/jquery.min.js"></script>
+  <script src="js/jquery.min.js"></script>
   <script src="js/jquery.scrollify.js"></script>
-  <script src="/js/swiper-bundle.min.js"></script>
+  <script src="js/swiper-bundle.min.js"></script>
   <script>
     // const sswiper = new Swiper('.sswiper', {
     //   lazy: true,
