--- a/index.html
+++ b/index.html
@@ -9,136 +9,150 @@
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
 
   <style>
-     html,
-      body {
-        position: relative;
-        height: 100%;
-      }
-    .s-swiper .swiper-slide img {
+    html,
+    body {
+      position: relative;
+      height: 100%;
+    }
+
+    .swiper {
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #fff;
+
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+
+    }
+
+    .swiper-slide img {
       display: block;
       width: 100%;
-      /* height: 100%; */
-      position: absolute;
-      left: 0;
-      top: 0;
-    }
-
-    .s-swiper .swiper-slide {
-      width: 100%;
-    }
-
-    .s-swiper .slide-load{
-      overflow: hidden;
-      background: url(./image/icon_loading.svg) center center no-repeat,#000;
-      background-size: 10%;
-      position: relative;
-      width: 100%;
-      padding-bottom: 31%;
+      height: 100%;
+      object-fit: cover;
     }
   </style>
 </head>
 
 <body>
-  <div id="wrapper">
-    <nav>
-      <input type="checkbox" id="toggle" class="input-toggler">
-      <div class="sidebar-overlay"></div>
-      <label for="toggle" class="menu-toggler">
-        <span class="menu-toggler-line"></span>
-        <span class="menu-toggler-line"></span>
-        <span class="menu-toggler-line"></span>
-      </label>
-      <div class="sidebar">
-        <a class="nav-brand" href="#">Navbar</a>
-        <ul class="menu">
-          <li><a class="menu-link" href="#">Home</a></li>
-          <li>
-            <a class="menu-link" href="#">Blog</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li><a class="menu-link" href="#">Portfolio</a></li>
-          <li><a class="menu-link" href="#">About</a></li>
-          <li><a class="menu-link" href="#">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
 
-    <!-- <div class="swiper s-swiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <div class="slide-load">
-            <a href="">
-              <img src="https://picsum.photos/1920/760" alt="">
+  <nav>
+    <input type="checkbox" id="toggle" class="input-toggler">
+    <div class="sidebar-overlay"></div>
+    <label for="toggle" class="menu-toggler">
+      <span class="menu-toggler-line"></span>
+      <span class="menu-toggler-line"></span>
+      <span class="menu-toggler-line"></span>
+    </label>
+    <div class="sidebar">
+      <a class="nav-brand" href="#">Navbar</a>
+      <ul class="menu">
+        <li><a class="menu-link" href="#">Home</a></li>
+        <li>
+          <a class="menu-link" href="#">Blog</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li><a class="menu-link" href="#">Portfolio</a></li>
+        <li><a class="menu-link" href="#">About</a></li>
+        <li><a class="menu-link" href="#">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+
+  <div class="swiper v-swiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <div class="swiper s-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="slide-load">
+                <a href="">
+                  <img src="https://picsum.photos/1920/760" alt="">
+                </a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <a href="">
+                <img src="https://picsum.photos/1920/760" alt="">
+            </div>
+            </a>
+            <div class="swiper-slide">
+              <a href="">
+                <img src="https://picsum.photos/1920/760" alt="">
+            </div>
+            </a>
+
+            <div class="swiper-slide">
+              <a href="">
+                <img src="https://picsum.photos/1920/760" alt="">
+            </div>
             </a>
           </div>
+          <div class="swiper-pagination"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
         </div>
-        <div class="swiper-slide">
-          <a href="">
-            <img src="https://picsum.photos/1920/760" alt=""></div>
-          </a>
-        <div class="swiper-slide">
-          <a href="">
-            <img src="https://picsum.photos/1920/760" alt=""></div>
-          </a>
-          
-        <div class="swiper-slide">
-          <a href="">
-            <img src="https://picsum.photos/1920/760" alt=""></div>
-          </a>
       </div>
-      <div class="swiper-pagination"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
-    </div> -->
-
-     <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="https://fakeimg.pl/2000x500/"></div>
-        <div class="swiper-slide"><img src="https://fakeimg.pl/2000x500/ff0000/"></div>
-        <div class="swiper-slide"><img src="https://fakeimg.pl/2000x500/000000/"></div>
-        <div class="swiper-slide"><img src="https://fakeimg.pl/2000x500/000000/"></div>
-      </div>
-      <div class="swiper-pagination"></div>
+      <div class="swiper-slide">Slide 2</div>
+      <div class="swiper-slide">Slide 3</div>
+      <div class="swiper-slide">Slide 4</div>
+      <div class="swiper-slide">Slide 5</div>
+      <div class="swiper-slide">Slide 6</div>
+      <div class="swiper-slide">Slide 7</div>
+      <div class="swiper-slide">Slide 8</div>
+      <div class="swiper-slide">Slide 9</div>
     </div>
-
-    <footer></footer>
-
   </div>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery.scrollify.js"></script>
+
   <script src="js/swiper-bundle.min.js"></script>
   <script>
-    // const sswiper = new Swiper('.sswiper', {
-    //   lazy: true,
-    //   slidesPerView: 1,
-    //   spaceBetween: 0,
-    //   loop: true,
-    //   centeredSlides: true,
-    //   navigation: {
-    //     nextEl: ".swiper-button-next",
-    //     prevEl: ".swiper-button-prev",
-    //   },
-    //   breakpoints: {
-    //     992: {
-    //       slidesPerView: "auto",
-    //       spaceBetween: 10,
-    //     }
-    //   },
-    // });
-      var swiper = new Swiper(".mySwiper", {
-          direction: "vertical",
-          slidesPerView: 1,
-          spaceBetween: 30,
-          mousewheel: true,
-          pagination: {
-            el: ".swiper-pagination",
-            clickable: true,
-          },
-        });
+    const sswiper = new Swiper('.s-swiper', {
+      lazy: true,
+      slidesPerView: 1,
+      spaceBetween: 0,
+      loop: true,
+      centeredSlides: true,
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+      },
+      breakpoints: {
+        992: {
+          slidesPerView: "auto",
+          spaceBetween: 10,
+        }
+      },
+    });
+  </script>
+  <script>
+    var vswiper = new Swiper(".v-swiper", {
+      direction: "vertical",
+      autoHeight: true,
+      slidesPerView: 1,
+      spaceBetween: 30,
+      mousewheel: true,
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+    });
   </script>
   <script src="js/index.js"></script>
 
