--- a/index-full.html
+++ b/index-full.html
@@ -36,6 +36,7 @@
     <div class="sidebar">
       <a class="nav-brand" href="#">Navbar</a>
       <ul class="menu">
+        <li class="user-mobile"></li>
         <li>
           <a class="menu-link" href="#">線上訂票</a>
           <ul class="dropdown-menu">
@@ -72,31 +73,151 @@
       </div>
     </div>
   </nav>
-
-  <section class="section-box">
-    <div class="swiper s-swiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="https://picsum.photos/g/1920/700?random=2"></div>
-        <div class="swiper-slide"><img src="https://picsum.photos/g/1920/700?random=2"></div>
-        <div class="swiper-slide"><img src="https://picsum.photos/g/1920/700?random=2"></div>
+  <div class="swiper s-swiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <img src="https://picsum.photos/g/1920/700?random=2" />
       </div>
-      <div class="swiper-pagination"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
+      <div class="swiper-slide">
+        <img src="https://picsum.photos/g/1920/700?random=2" />
+      </div>
+      <div class="swiper-slide">
+        <img src="https://picsum.photos/g/1920/700?random=2" />
+      </div>
     </div>
-  </section>
-  <section>123456789</section>
-  <section>123456789</section>
-  <section>123456789</section>
-  <section>123456789</section>
-  <section>123456789</section>
-  <section>123456789</section>
-  <section>123456789</section>
-  <section>123456789</section>
-  <section>123456789</section>
-  <section>123456789</section>
-  <section>123456789</section>
-  <section>123456789</section>
+    <div class="swiper-pagination"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  </div>
+  <div class="section-box">
+    <section class="section">
+      <div class="main-title">
+        <div>NOW SHOWING</div>
+        <div>現正熱映</div>
+      </div>
+      <div class="content content-row">
+        <div class="showing-list row-5">
+          <div class="poster">
+            <img src="https://fakeimg.pl/250x350/" alt="" />
+          </div>
+          <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
+          <div class="movie-level y12">輔12級</div>
+          <div class="small-font">上映日期 2022-03-25</div>
+        </div>
+          <div class="showing-list row-5">
+            <div class="poster">
+              <img src="https://fakeimg.pl/250x350/" alt="" />
+            </div>
+            <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
+            <div class="movie-level y6">護6級</div>
+            <div class="small-font">上映日期 2022-03-25</div>
+          </div>
+          <div class="showing-list row-5">
+            <div class="poster">
+              <img src="https://fakeimg.pl/250x350/" alt="" />
+            </div>
+            <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
+            <div class="movie-level y12">輔12級</div>
+            <div class="small-font">上映日期 2022-03-25</div>
+          </div>
+          <div class="showing-list row-5">
+            <div class="poster">
+              <img src="https://fakeimg.pl/250x350/" alt="" />
+            </div>
+            <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
+            <div class="movie-level y6">護6級</div>
+            <div class="small-font">上映日期 2022-03-25</div>
+          </div>
+          <div class="showing-list row-5">
+            <div class="poster">
+              <img src="https://fakeimg.pl/250x350/" alt="" />
+            </div>
+            <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
+            <div class="movie-level y6">護6級</div>
+            <div class="small-font">上映日期 2022-03-25</div>
+          </div>
+
+      </div>
+    </section>
+    <section class="section">
+      <div class="content content-row">
+        <div class="onlinebook row-2">
+          <div class="main-title">
+            <div>ONLINE BOOK</div>
+            <div>快速訂票</div>
+          </div>
+          <div class="select-box">
+              <select>
+                <option value="value1">Value 1</option>
+                <option value="value2">Value 2</option>
+                <option value="value3">Value 3</option>
+              </select>
+              <select>
+                <option value="value1">Value 1</option>
+                <option value="value2">Value 2</option>
+                <option value="value3">Value 3</option>
+              </select>
+          
+              <select>
+                <option value="value1">Value 1</option>
+                <option value="value2">Value 2</option>
+                <option value="value3">Value 3</option>
+              </select>
+              <select>
+                <option value="value1">Value 1</option>
+                <option value="value2">Value 2</option>
+                <option value="value3">Value 3</option>
+              </select>
+          </div>
+        </div>
+        <div class="lastestnew row-2">
+          <div class="main-title">
+            <div>LATEST NEWS</div>
+            <div>最新消息</div>
+          </div>
+          <div class="news-box">
+            <a href="#">
+              <img src="https://fakeimg.pl/250x200/" />
+              <div class="new-info">
+                <p class="bigger-font">看指定電影送限定海報</p>
+                <p>訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。</p>
+                <hr>
+                <p>2022.08.13</p>
+              </div>
+            </a>
+            <a href="#">
+              <img src="https://fakeimg.pl/250x200/" />
+              <div class="new-info">
+                <p class="bigger-font">看指定電影送限定海報</p>
+                <p>訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。</p>
+                <hr>
+                <p>2022.08.13</p>
+              </div>
+            </a>
+            
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+  <footer>
+    <div>
+      <img src="https://fakeimg.pl/250x100/" />
+      <div>
+        <a href=""><img src="https://fakeimg.pl/25x25/" /></a>
+        <a href=""><img src="https://fakeimg.pl/25x25/" /></a>
+        <a href=""><img src="https://fakeimg.pl/25x25/" /></a>
+        <a href=""><img src="https://fakeimg.pl/25x25/" /></a>
+        <div class="small-font">
+          公館百老匯影城 02-8663-6128 | 新竹百老匯影城 02-86636128
+        </div>
+        <div class="small-font">
+          Copyright© 2022 Broadway Cinemas All Rights Reserved.
+        </div>
+      </div>
+    </div>
+   
+  </footer>
 
   <script src="js/jquery.min.js"></script>
   <script src="js/aos.min.js"></script>
@@ -110,9 +231,6 @@
   <script>
     const slideSwiper = new Swiper('.s-swiper', {
       lazy: true,
-      slidesPerView: 1,
-      spaceBetween: 0,
-      centeredSlides: true,
       pagination: {
         el: ".swiper-pagination",
         clickable: true,
