--- a/index-full.html
+++ b/index-full.html
@@ -35,41 +35,82 @@
     </label>
     <div class="sidebar">
       <a class="nav-brand" href="#">Navbar</a>
-      <ul class="menu">
-        <li class="user-mobile"></li>
-        <li>
-          <a class="menu-link" href="#">線上訂票</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">公館場次查詢</a></li>
-            <li><a class="dropdown-item" href="#">新竹場次查詢</a></li>
-          </ul>
-        </li>
-        <li>
-          <a class="menu-link" href="#">電影介紹</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">現正熱映</a></li>
-            <li><a class="dropdown-item" href="#">即將上映</a></li>
-          </ul>
-        </li>
-        <li><a class="menu-link" href="#">最新消息</a></li>
-        <li><a class="menu-link" href="#">業務專區</a></li>
-        <li><a class="menu-link" href="#">關於影城</a></li>
-      </ul>
-      <!-- isUser DEMO用 -->
-      <div class="user-account isUser">
-        <div class="user">HELLO! Yick Shun</div>
-        <div class="user-login">
-          <a href="">會員登入</a>
+      <!-- navbar for pc  -->
+      <div class="forpc">
+        <ul class="menu">
+          <li class="user-mobile"></li>
+          <li>
+            <a class="menu-link" href="#">線上訂票</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">公館場次查詢</a></li>
+              <li><a class="dropdown-item" href="#">新竹場次查詢</a></li>
+            </ul>
+          </li>
+          <li>
+            <a class="menu-link" href="#">電影介紹</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">現正熱映</a></li>
+              <li><a class="dropdown-item" href="#">即將上映</a></li>
+            </ul>
+          </li>
+          <li><a class="menu-link" href="#">最新消息</a></li>
+          <li><a class="menu-link" href="#">業務專區</a></li>
+          <li><a class="menu-link" href="#">關於影城</a></li>
+        </ul>
+        <!-- isUser DEMO用 -->
+        <div class="user-account isUser">
+          <div class="user">HELLO! Yick Shun</div>
+          <div class="user-login">
+            <a href="">會員登入</a>
+          </div>
+          <div class="user-regist">
+            <a href="">加入會員</a>
+          </div>
+          <div class="account-sub">
+            <hr>
+            <a href="">訂票查詢與取消</a>
+            <a href="">編輯會員系統</a>
+            <a href="">會員優惠PLUS</a>
+          </div>
         </div>
-        <div class="user-regist">
-          <a href="">加入會員</a>
+      </div>
+      <!-- navbar for mobile  -->
+      <div class="formobile">
+        <!-- isUser DEMO用 -->
+        <div class="user-account isUser">
+          <div class="user">HELLO! Yick Shun</div>
+          <div class="user-login">
+            <a href="">會員登入</a>
+          </div>
+          <div class="user-regist">
+            <a href="">加入會員</a>
+          </div>
+          <div class="account-sub">
+            <hr>
+            <a href="">訂票查詢與取消</a>
+            <a href="">編輯會員系統</a>
+            <a href="">會員優惠PLUS</a>
+          </div>
         </div>
-        <div class="account-sub">
-          <hr>
-          <a href="">訂票查詢與取消</a>
-          <a href="">編輯會員系統</a>
-          <a href="">會員優惠PLUS</a>
-        </div>
+        <ul class="menu">
+          <li>
+            <a class="menu-link" href="#">線上訂票</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">公館場次查詢</a></li>
+              <li><a class="dropdown-item" href="#">新竹場次查詢</a></li>
+            </ul>
+          </li>
+          <li>
+            <a class="menu-link" href="#">電影介紹</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">現正熱映</a></li>
+              <li><a class="dropdown-item" href="#">即將上映</a></li>
+            </ul>
+          </li>
+          <li><a class="menu-link" href="#">最新消息</a></li>
+          <li><a class="menu-link" href="#">業務專區</a></li>
+          <li><a class="menu-link" href="#">關於影城</a></li>
+        </ul>
       </div>
     </div>
   </nav>
@@ -97,46 +138,55 @@
       </div>
       <div class="content content-row">
         <div class="showing-list row-5">
-          <div class="poster">
-            <img src="https://fakeimg.pl/250x350/" alt="" />
-          </div>
-          <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
-          <div class="movie-level y12">輔12級</div>
-          <div class="small-font">上映日期 2022-03-25</div>
-        </div>
-          <div class="showing-list row-5">
-            <div class="poster">
-              <img src="https://fakeimg.pl/250x350/" alt="" />
-            </div>
-            <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
-            <div class="movie-level y6">護6級</div>
-            <div class="small-font">上映日期 2022-03-25</div>
-          </div>
-          <div class="showing-list row-5">
+          <a href="">
             <div class="poster">
               <img src="https://fakeimg.pl/250x350/" alt="" />
             </div>
             <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
             <div class="movie-level y12">輔12級</div>
             <div class="small-font">上映日期 2022-03-25</div>
-          </div>
-          <div class="showing-list row-5">
+          </a>
+        </div>
+        <div class="showing-list row-5">
+          <a href="">
             <div class="poster">
               <img src="https://fakeimg.pl/250x350/" alt="" />
             </div>
             <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
             <div class="movie-level y6">護6級</div>
             <div class="small-font">上映日期 2022-03-25</div>
-          </div>
-          <div class="showing-list row-5">
+          </a>
+        </div>
+        <div class="showing-list row-5">
+          <a href="">
             <div class="poster">
               <img src="https://fakeimg.pl/250x350/" alt="" />
             </div>
             <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
             <div class="movie-level y6">護6級</div>
             <div class="small-font">上映日期 2022-03-25</div>
-          </div>
-
+          </a>
+        </div>
+        <div class="showing-list row-5">
+          <a href="">
+            <div class="poster">
+              <img src="https://fakeimg.pl/250x350/" alt="" />
+            </div>
+            <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
+            <div class="movie-level y6">護6級</div>
+            <div class="small-font">上映日期 2022-03-25</div>
+          </a>
+        </div>
+        <div class="showing-list row-5">
+          <a href="">
+            <div class="poster">
+              <img src="https://fakeimg.pl/250x350/" alt="" />
+            </div>
+            <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
+            <div class="movie-level y6">護6級</div>
+            <div class="small-font">上映日期 2022-03-25</div>
+          </a>
+        </div>
       </div>
     </section>
     <section class="section">
@@ -147,27 +197,27 @@
             <div>快速訂票</div>
           </div>
           <div class="select-box">
-              <select>
-                <option value="value1">Value 1</option>
-                <option value="value2">Value 2</option>
-                <option value="value3">Value 3</option>
-              </select>
-              <select>
-                <option value="value1">Value 1</option>
-                <option value="value2">Value 2</option>
-                <option value="value3">Value 3</option>
-              </select>
-          
-              <select>
-                <option value="value1">Value 1</option>
-                <option value="value2">Value 2</option>
-                <option value="value3">Value 3</option>
-              </select>
-              <select>
-                <option value="value1">Value 1</option>
-                <option value="value2">Value 2</option>
-                <option value="value3">Value 3</option>
-              </select>
+            <select>
+              <option value="value1">Value 1</option>
+              <option value="value2">Value 2</option>
+              <option value="value3">Value 3</option>
+            </select>
+            <select>
+              <option value="value1">Value 1</option>
+              <option value="value2">Value 2</option>
+              <option value="value3">Value 3</option>
+            </select>
+
+            <select>
+              <option value="value1">Value 1</option>
+              <option value="value2">Value 2</option>
+              <option value="value3">Value 3</option>
+            </select>
+            <select>
+              <option value="value1">Value 1</option>
+              <option value="value2">Value 2</option>
+              <option value="value3">Value 3</option>
+            </select>
           </div>
         </div>
         <div class="lastestnew row-2">
@@ -194,7 +244,7 @@
                 <p>2022.08.13</p>
               </div>
             </a>
-            
+
           </div>
         </div>
       </div>
@@ -216,7 +266,7 @@
         </div>
       </div>
     </div>
-   
+
   </footer>
 
   <script src="js/jquery.min.js"></script>
