--- a/index-full.html
+++ b/index-full.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="css/aos.min.css">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/index.min.css">
+  <style>
+    .swiper-slide img{
+      width: 100%;
+    }
+  </style>
 </head>
 
 <body class="no-scroll">
