--- a/index-full.html
+++ b/index-full.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="css/aos.min.css">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/index.min.css">
+  <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   <style>
     .swiper-slide img{
       width: 100%;
@@ -202,27 +206,38 @@
             <div>快速訂票</div>
           </div>
           <div class="select-box">
-            <select>
-              <option value="value1">Value 1</option>
-              <option value="value2">Value 2</option>
-              <option value="value3">Value 3</option>
-            </select>
-            <select>
-              <option value="value1">Value 1</option>
-              <option value="value2">Value 2</option>
-              <option value="value3">Value 3</option>
-            </select>
-
-            <select>
-              <option value="value1">Value 1</option>
-              <option value="value2">Value 2</option>
-              <option value="value3">Value 3</option>
-            </select>
-            <select>
-              <option value="value1">Value 1</option>
-              <option value="value2">Value 2</option>
-              <option value="value3">Value 3</option>
-            </select>
+            <div>
+              <span class="material-icons"> location_on </span>
+              <select>
+                <option value="value1">請選擇影城</option>
+                <option value="value2">Value 2</option>
+                <option value="value3">Value 3</option>
+              </select>
+            </div>
+            <div>
+              <span class="material-icons"> movie </span>
+              <select>
+                <option value="value1">請選擇電影</option>
+                <option value="value2">Value 2</option>
+                <option value="value3">Value 3</option>
+              </select>
+            </div>
+            <div>
+              <span class="material-icons"> calendar_month </span>
+              <select>
+                <option value="value1">請選擇日期</option>
+                <option value="value2">Value 2</option>
+                <option value="value3">Value 3</option>
+              </select>
+            </div>
+            <div>
+              <span class="material-icons"> watch_later </span>
+              <select>
+                <option value="value1">請選擇場次</option>
+                <option value="value2">Value 2</option>
+                <option value="value3">Value 3</option>
+              </select>
+            </div>
           </div>
         </div>
         <div class="lastestnew row-2">
