--- a/movie-info.html
+++ b/movie-info.html
@@ -113,26 +113,21 @@
   <div class="section-box">
     <section class="section">
       <div class="content content-row">
-        <div class="showing-list row-2">
-          <a href="">
-            <div class="poster">
-              <img src="https://fakeimg.pl/250x350/" alt="" />
-            </div>
-            <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
-            <div class="movie-level y12">輔12級</div>
-            <div class="small-font">上映日期 2022-03-25</div>
-          </a>
+        <div class="movie-item row-2-1">
+          <img src="https://fakeimg.pl/250x350/" alt="" />
         </div>
-        <div class="showing-list row-3">
-          <a href="">
-            <div class="poster">
-              <img src="https://fakeimg.pl/250x350/" alt="" />
+        <div class="movie-item row-2-auto">
+            <div class="movie-level y12">護6級</div>
+            <div class="movie-title bigger-font">劫命救護<span>AMBULANCE</span></div>
+            <div>上映日期 2022-03-25</div>
+            <div class="book-btn"><span class="material-icons"> featured_play_list </span>前往訂票</div>
+            <div class="list-item">
+              <div>導演|<span>麥可貝</span></div>
+              <div>演員|<span>傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世</span></div>
+              <div>類型|<span>動作、懸疑、驚悚、劇情</span></div>
+              <div>片長|<span>136分鐘</span></div>
             </div>
-            <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
-            <div class="movie-level y6">護6級</div>
-            <div class="small-font">上映日期 2022-03-25</div>
-          </a>
-        </div>
+          </div>
       </div>
     </section>
   
@@ -166,8 +161,5 @@
   </script>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/index.js"></script>
-
-
 </body>
-
 </html>
