--- a/index-full.html
+++ b/index-full.html
@@ -5,14 +5,11 @@
   <meta charset="UTF-8">
   <title>document</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="css/global.min.css">
   <link rel="stylesheet" href="css/aos.min.css">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/index.min.css">
-  <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
   <style>
     .swiper-slide img{
       width: 100%;
@@ -47,7 +44,6 @@
       <!-- navbar for pc  -->
       <div class="forpc">
         <ul class="menu">
-          <li class="user-mobile"></li>
           <li>
             <a class="menu-link" href="#">線上訂票</a>
             <ul class="dropdown-menu">
@@ -274,10 +270,10 @@
     <div>
       <img src="https://fakeimg.pl/250x100/" />
       <div>
-        <a href=""><img src="https://fakeimg.pl/25x25/" /></a>
-        <a href=""><img src="https://fakeimg.pl/25x25/" /></a>
-        <a href=""><img src="https://fakeimg.pl/25x25/" /></a>
-        <a href=""><img src="https://fakeimg.pl/25x25/" /></a>
+        <a href=""><img src="image/svg/dashicons_facebook-alt.svg" /></a>
+        <a href=""><img src="image/svg/simple-line-icons_social-instagram.svg" /></a>
+        <a href=""><img src="image/svg/typcn_social-youtube.svg" /></a>
+        <a href=""><img src="image/svg/dashicons_email-alt.svg" /></a>
         <div class="small-font">
           公館百老匯影城 02-8663-6128 | 新竹百老匯影城 02-86636128
         </div>
@@ -318,22 +314,6 @@
     });
   </script>
   <script src="js/index.js"></script>
-  <script>
-    $('#landing').on('click', function () {
-      $('body').addClass('start-scroll')
-      $('body').removeClass('no-scroll')
-    });
-  </script>
-  <script>
-    $(window).on('mousewheel', function (e) {
-      if(e){
-        $('body').addClass('start-scroll')
-        $('body').removeClass('no-scroll')
-      }
-    });
-  </script>
-
-
 </body>
 
 </html>
