效果 樣式調整

--- a/index-full.html
+++ b/index-full.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>document</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link rel="stylesheet" href="css/global.min.css">
-  <link rel="stylesheet" href="css/aos.min.css">
-  <link rel="stylesheet" href="css/swiper-bundle.min.css">
-  <link rel="stylesheet" href="css/index.min.css">
+  <link rel="stylesheet" href="css/global.min.css" />
+  <link rel="stylesheet" href="css/aos.min.css" />
+  <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="css/index.min.css" />
   <style>
-    .swiper-slide img{
+    .swiper-slide img {
       width: 100%;
     }
   </style>
@@ -19,11 +19,13 @@
 
 <body class="no-scroll">
   <div id="landing">
-    <div class="landing-page"></div>
-    <h1>
-      <div data-aos="fade-down" data-aos-duration="1200">BROADWAY</div>
-      <div data-aos="fade-down" data-aos-duration="1200" data-aos-delay="400">CINEMAS</div>
-    </h1>
+    <div class="landing-page">
+      <h1 data-aos="fade-down" data-aos-duration="1200">
+        BROADWAY
+        <span data-aos="fade-down" data-aos-duration="1200" data-aos-delay="400">CINEMAS</span>
+      </h1>
+    </div>
+
     <div class="welcome" data-aos="fade-in" data-aos-duration="1200" data-aos-delay="1000">
       <div class="text-round"></div>
       <div class="mouse">
@@ -40,7 +42,7 @@
       <span class="menu-toggler-line"></span>
     </label>
     <div class="sidebar">
-      <a class="nav-brand" href="#">Navbar</a>
+      <a class="nav-brand" href="index.html">Navbar</a>
       <!-- navbar for pc  -->
       <div class="forpc">
         <ul class="menu">
@@ -64,7 +66,9 @@
         </ul>
         <!-- isUser DEMO用 -->
         <div class="user-account isUser">
-          <div class="user">HELLO! Yick Shun</div>
+          <div class="user">
+            HELLO! Yick Shun <span class="material-icons"> person </span><span class="material-icons"> menu </span>
+          </div>
           <div class="user-login">
             <a href="">會員登入</a>
           </div>
@@ -72,50 +76,12 @@
             <a href="">加入會員</a>
           </div>
           <div class="account-sub">
-            <hr>
+            <hr />
             <a href="">訂票查詢與取消</a>
             <a href="">編輯會員系統</a>
             <a href="">會員優惠PLUS</a>
           </div>
         </div>
-      </div>
-      <!-- navbar for mobile  -->
-      <div class="formobile">
-        <!-- isUser DEMO用 -->
-        <div class="user-account isUser">
-          <div class="user">HELLO! Yick Shun</div>
-          <div class="user-login">
-            <a href="">會員登入</a>
-          </div>
-          <div class="user-regist">
-            <a href="">加入會員</a>
-          </div>
-          <div class="account-sub">
-            <hr>
-            <a href="">訂票查詢與取消</a>
-            <a href="">編輯會員系統</a>
-            <a href="">會員優惠PLUS</a>
-          </div>
-        </div>
-        <ul class="menu">
-          <li>
-            <a class="menu-link" href="#">線上訂票</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">公館場次查詢</a></li>
-              <li><a class="dropdown-item" href="#">新竹場次查詢</a></li>
-            </ul>
-          </li>
-          <li>
-            <a class="menu-link" href="#">電影介紹</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">現正熱映</a></li>
-              <li><a class="dropdown-item" href="#">即將上映</a></li>
-            </ul>
-          </li>
-          <li><a class="menu-link" href="#">最新消息</a></li>
-          <li><a class="menu-link" href="#">業務專區</a></li>
-          <li><a class="menu-link" href="#">關於影城</a></li>
-        </ul>
       </div>
     </div>
   </nav>
@@ -143,11 +109,13 @@
       </div>
       <div class="content content-row">
         <div class="showing-list row-5">
-          <a href="">
+          <a href="movie-info.html">
             <div class="poster">
               <img src="https://fakeimg.pl/250x350/" alt="" />
             </div>
-            <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
+            <div class="movie-title bigger-font">
+              劫命救護<span class="small-font">AMBULANCE</span>
+            </div>
             <div class="movie-level y12">輔12級</div>
             <div class="small-font">上映日期 2022-03-25</div>
           </a>
@@ -157,7 +125,9 @@
             <div class="poster">
               <img src="https://fakeimg.pl/250x350/" alt="" />
             </div>
-            <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
+            <div class="movie-title bigger-font">
+              劫命救護<span class="small-font">AMBULANCE</span>
+            </div>
             <div class="movie-level y6">護6級</div>
             <div class="small-font">上映日期 2022-03-25</div>
           </a>
@@ -167,7 +137,9 @@
             <div class="poster">
               <img src="https://fakeimg.pl/250x350/" alt="" />
             </div>
-            <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
+            <div class="movie-title bigger-font">
+              劫命救護<span class="small-font">AMBULANCE</span>
+            </div>
             <div class="movie-level y6">護6級</div>
             <div class="small-font">上映日期 2022-03-25</div>
           </a>
@@ -177,7 +149,9 @@
             <div class="poster">
               <img src="https://fakeimg.pl/250x350/" alt="" />
             </div>
-            <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
+            <div class="movie-title bigger-font">
+              劫命救護<span class="small-font">AMBULANCE</span>
+            </div>
             <div class="movie-level y6">護6級</div>
             <div class="small-font">上映日期 2022-03-25</div>
           </a>
@@ -187,7 +161,9 @@
             <div class="poster">
               <img src="https://fakeimg.pl/250x350/" alt="" />
             </div>
-            <div class="movie-title bigger-font">劫命救護<span class="small-font">AMBULANCE</span></div>
+            <div class="movie-title bigger-font">
+              劫命救護<span class="small-font">AMBULANCE</span>
+            </div>
             <div class="movie-level y6">護6級</div>
             <div class="small-font">上映日期 2022-03-25</div>
           </a>
@@ -246,8 +222,10 @@
               <img src="https://fakeimg.pl/250x200/" />
               <div class="new-info">
                 <p class="bigger-font">看指定電影送限定海報</p>
-                <p>訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。</p>
-                <hr>
+                <p>
+                  訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。
+                </p>
+                <hr />
                 <p>2022.08.13</p>
               </div>
             </a>
@@ -255,12 +233,13 @@
               <img src="https://fakeimg.pl/250x200/" />
               <div class="new-info">
                 <p class="bigger-font">看指定電影送限定海報</p>
-                <p>訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。</p>
-                <hr>
+                <p>
+                  訂票觀看蝙蝠俠電影，就能獲的限定套組海報，數量有限請手刀前往。
+                </p>
+                <hr />
                 <p>2022.08.13</p>
               </div>
             </a>
-
           </div>
         </div>
       </div>
@@ -282,20 +261,18 @@
         </div>
       </div>
     </div>
-
   </footer>
 
   <script src="js/jquery.min.js"></script>
   <script src="js/aos.min.js"></script>
   <script>
     AOS.init({
-      mirror: true,
-      // easing: 'ease-out-back',
+      mirror: false,
     });
   </script>
   <script src="js/swiper-bundle.min.js"></script>
   <script>
-    const slideSwiper = new Swiper('.s-swiper', {
+    const slideSwiper = new Swiper(".s-swiper", {
       lazy: true,
       pagination: {
         el: ".swiper-pagination",
@@ -309,7 +286,7 @@
         992: {
           slidesPerView: "auto",
           spaceBetween: 10,
-        }
+        },
       },
     });
   </script>
