--- a/movie-info.html
+++ b/movie-info.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="css/aos.min.css">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/index.min.css">
- 
+
   <style>
-    .swiper-slide img{
+    .swiper-slide img {
       width: 100%;
     }
   </style>
@@ -28,7 +28,7 @@
       <span class="menu-toggler-line"></span>
     </label>
     <div class="sidebar">
-      <a class="nav-brand" href="#">Navbar</a>
+      <a class="nav-brand" href="index.html">Navbar</a>
       <!-- navbar for pc  -->
       <div class="forpc">
         <ul class="menu">
@@ -114,33 +114,36 @@
           <img src="https://fakeimg.pl/250x350/" alt="" />
         </div>
         <div class="movie-item row-2-9">
-            <div class="movie-level y12">護6級</div>
-            <div class="movie-title bigger-font">劫命救護<span>AMBULANCE</span></div>
-            <div class="up-date">上映日期 2022-03-25</div>
-            <div class="book-btn"><span class="material-icons"> featured_play_list </span>前往訂票</div>
-            <div class="list-item">
-              <div>導演<span>麥可貝</span></div>
-              <div class="list-2">演員<div><span class="mul-ellipsis-4">傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div></div>
-              <div>類型<span>動作、懸疑、驚悚、劇情</span></div>
-              <div>片長<span>136分鐘</span></div>
+          <div class="movie-level y12">護6級</div>
+          <div class="movie-title bigger-font">劫命救護<span>AMBULANCE</span></div>
+          <div class="up-date">上映日期 2022-03-25</div>
+          <div class="book-btn"><span class="material-icons"> featured_play_list </span>前往訂票</div>
+          <div class="list-item">
+            <div>導演<span>麥可貝</span></div>
+            <div class="list-2">演員<div><span class="mul-ellipsis-4">傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
             </div>
+            <div>類型<span>動作、懸疑、驚悚、劇情</span></div>
+            <div>片長<span>136分鐘</span></div>
           </div>
+        </div>
       </div>
       <div class="content">
         <div class="primary-title bigger-font">電影介紹
         </div>
         <div>退伍美軍威爾·夏普急需妻子高達23.1萬美元的癌症手術費，走投無路之下去向自己久未聯繫的繼哥丹尼借錢，但身為職業銀行搶匪的丹尼拜託威爾參與他即將進行的洛杉磯市中心聯邦銀行的搶劫計劃（英語：Bank
-        robbery），承諾威爾只要幫忙則會將所需金額分給他。猶豫不決的威爾為了妻子而勉強答應，跟隨丹尼以及他招攬的一群職業罪犯迅速攻佔整間銀行、劫持員工、將保險庫及所有財物洗劫一空。然而，一名年輕警察查克因打算約一名心儀的銀行女員工而不請自來，直接打亂一行人的安排，丹尼僅能開門讓他進銀行後將查克挾持。</div>
+          robbery），承諾威爾只要幫忙則會將所需金額分給他。猶豫不決的威爾為了妻子而勉強答應，跟隨丹尼以及他招攬的一群職業罪犯迅速攻佔整間銀行、劫持員工、將保險庫及所有財物洗劫一空。然而，一名年輕警察查克因打算約一名心儀的銀行女員工而不請自來，直接打亂一行人的安排，丹尼僅能開門讓他進銀行後將查克挾持。
+        </div>
       </div>
       <div class="trailer">
         <div class="video-container">
-            <iframe width="854" height="480" src="https://www.youtube.com/embed/oscVV_ZGU8g" title="YouTube video player"
-              frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
+          <iframe width="854" height="480" src="https://www.youtube.com/embed/oscVV_ZGU8g" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div>
       </div>
     </section>
-    
+
   </div>
   <footer>
     <div>
@@ -165,4 +168,5 @@
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/index.js"></script>
 </body>
+
 </html>
