--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 <body class="no-scroll">
   <div id="landing">
     <div class="landing-page">
-      <h1 data-aos="fade-down" data-aos-duration="1200">
+      <h1>
         BROADWAY
-        <span data-aos="fade-down" data-aos-duration="1200" data-aos-delay="400">CINEMAS</span>
+        <span>CINEMAS</span>
       </h1>
     </div>
 
-    <div class="welcome" data-aos="fade-in" data-aos-duration="1200" data-aos-delay="1000">
+    <div class="welcome">
       <div class="text-round"></div>
       <div class="mouse">
         <div class="scroller"></div>
